# Auto-GPT-Plugin-google-scholar

./: CITATION.cff  LICENSE  README.md  codemeta.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
src/google_scholar/: __init__.py  google_scholar_plugin.py  google_scholar_search.py  test_google_scholar_plugin.py  test_google_scholar_search.py
src/tests/: test_google_scholar_plugin.py  test_google_scholar_search.py
tests/: test_google_scholar_plugin.py  test_google_scholar_search.py
