[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-scholar-plugin"
version = "0.0.1"
description = "A plugin for AutoGPT that searches Google Scholar and returns results in a JSON structure."
authors = [{name = "Kristian Garza", email = "kj.garza@gmail.com"}]
homepage = "https://github.com/kjgarza/google-scholar-plugin"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Source = "https://github.com/kjgarza/google-scholar-plugin"

[project.requires-python]
python_version = ">=3.6"

[project.dependencies]
scholarly = ">=1.0,<2.0"

dependencies = ["abstract-singleton"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"